--- a/desafio20/package.json
+++ b/desafio20/package.json
@@ -11,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^4.6.0",
-    "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
+    "koa-hbs-renderer": "^1.2.0",
     "koa-router": "^12.0.0",
-    "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
