--- a/desafio20/package.json
+++ b/desafio20/package.json
@@ -16,6 +16,7 @@
     "koa-body": "^5.0.0",
     "koa-hbs-renderer": "^1.2.0",
     "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
